--- a/style.css
+++ b/style.css
@@ -1,73 +1,73 @@
 body{
-    background-color: teal;
+    background-color: rgb(0, 128, 128);
 }
 .main{
-    background-color:tomato;
+    background-color:rgb(255, 99, 71);
     height:830px;
 }
 .main .container{
    display: flex;
    flex-direction: column;
 }
-.main .container .para1{
+.main .container .header{
    margin:10px;
-   background-color:blue;
+   background-color:rgb(0, 0, 255);
    height:100px;
-   color:white;
+   color:rgb(255, 255, 255);
    text-align:center;
    padding-top: 2%;
    font-size: 30px;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.main .container .para2{
+.main .container .nav{
    margin-top:0px;
    margin-left:10px;
    margin-right:10px;
    margin-bottom: 10px;
-   background-color:green;
+   background-color:rgb(0, 128, 0);
    height:50px;
    
 }
-.main .container .para2 ul li{
+.main .container .nav ul li{
     list-style-type: none;
     display: inline;
     padding-left: 12%;
-    color:white;
+    color:rgb(255, 255, 255);
 }
 .main .container .para3{
    margin-top:0px;
    margin-left:10px;
    margin-right:10px;
    margin-bottom: 10px;
-   background-color:white;
+   background-color:rgb(255, 255, 255);
    height:300px;
 }
 .main .para3{
     display: flex;
     flex-direction: row;
 }
-.main .container .para3 .para31{
-    background-color: blueviolet;
+.main .container .para3 .section{
+    background-color: rgb(138, 43, 226);
     flex:2;
     height:290px;
     margin:5px;
 }
-.main .container .para3 .para31 ul li{
+.main .container .para3 .section ul li{
 list-style-type:circle;
-color:white;
+color:rgb(255, 255, 255);
 text-align: justify;
 padding: 5px;
 }
 
-.main .container .para3 .para32{
-    background-color:yellowgreen;
+.main .container .para3 .aside{
+    background-color:rgb(154, 205, 50);
     height:290px;
     flex:1;
     margin:5px;
 }
 
 
-.main .container .para3 .para32 h1,ul li{
+.main .container .para3 .aside h1,ul li{
     text-align: center;
     list-style-type:none;
     padding:6px;
@@ -79,26 +79,26 @@ padding: 5px;
     flex-direction: row;
 }
 .main .last .box1{
-   background-color:white;
+   background-color:rgb(255, 255, 255);
    height:235px;
    flex:1;
    margin-left:10px;
    margin-right: 5px;
 }
 .main .last .box2{
-   background-color:white;
+   background-color:rgb(255, 255, 255);
    height:235px;
    flex:1;
    margin-right: 5px;
 }
 .main .last .box3{
-  background-color:white;
+  background-color:rgb(255, 255, 255);
   height:235px;
   flex:1;
   margin-right: 5px;
 }
 .main .last .box4{
-background-color:white;
+background-color:rgb(255, 255, 255);
 height:235px;
 flex:1;
 margin-right:10px;
@@ -106,7 +106,7 @@ margin-right:10px;
 .container .footer{
     width:98.7%;
     height: 60px;
-    background-color:lightblue;
+    background-color:rgb(173, 216, 230);
     margin-top:7px;
     margin-left:10px;
     margin-right:5px;
@@ -114,5 +114,9 @@ margin-right:10px;
 }
 .container .footer h1{
     text-align:center;
-    color:blue;
+    color:rgb(0, 0, 255);
+}
+.car{
+    width: 100%;
+    height:100%;
 }
